# ComputerGraphics_D3D11

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat
Example/: CMakeLists.txt
Example/resources/gltfmodel_component/shaders/: shader.hlsl
Example/resources/pingpong_component/shaders/: circle.hlsl
Example/resources/triangle_component/shaders/: shader.hlsl
Example/shaders/: MyVeryFirstShader.hlsl  shader.hlsl
Example/src/: MySuper3DApp.cpp  main.cpp
Example/src/components/: game_component.h  game_component_decl.h  gltfmodel_component.cpp  triangle_component.cpp  triangle_component.h
Example/src/components/impl/: gltfmodel_component.cpp  gltfmodel_component.h  pingpong_component.cpp  pingpong_component.h  triangle_component.h
Example/src/core/: game.cpp  game.h  game_engine.cpp  game_engine.h
Example/src/render/: buffer.cpp  buffer.h  camera.cpp  camera.h  d3d11_common.h  render.cpp  render.h  shader.cpp  shader.h
Example/src/render/resource/: buffer.cpp  buffer.h  shader.cpp  shader.h  texture.h
Example/src/win32/: win.cpp  win.h
framework/: CMakeLists.txt
framework/component/: game_component.h  game_component_decl.h
framework/core/: game.cpp  game.h
framework/render/: annotation.cpp  annotation.h  camera.cpp  camera.h  d3d11_common.h  render.cpp  render.h
framework/render/resource/: buffer.cpp  buffer.h  resource_manager.h  shader.cpp  shader.h  shader_cache.cpp  shader_cache.h  texture.cpp  texture.h
framework/render/scene/: light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  particle_system.cpp  particle_system.h  primitive.h  scene.cpp  scene.h
framework/render/scene/lights/: ambient.cpp  direction.cpp  point.cpp
framework/render/utils/: sort_lib.cpp  sort_lib.h
framework/win32/: input.cpp  input.h  win.cpp  win.h
resources/models/Plane_FBX/: 1000_plane.fbx
resources/pingpong_component/shaders/: brick.hlsl
resources/shaders/deferred/: assemble_gbuffers.hlsl  generate_gbuffers.hlsl  light_pass.hlsl  opaque_pass.hlsl  present_shader.hlsl
resources/shaders/deferred/light_pass/: ambient.hlsl  direction.hlsl  point.hlsl
resources/shaders/particles/: Globals.h  ParticleRenderQuad.hlsl  emit.hlsl  init_dead_list.hlsl  render.hlsl  reset.hlsl  simulate.hlsl
resources/shaders/sort/: init_sort_args.hlsl  sort.hlsl  sort_inner.hlsl  sort_step.hlsl
resources/shaders/voxelization/: build_bvh.hlsl  common.h  init_bvh.hlsl
src/: gltf_main.cpp  katamari_main.cpp  main.cpp  orbit_main.cpp  particle_main.cpp  pingpong_main.cpp  triangle_main.cpp
src/components/: game_component_decl.h  gltfmodel_component.cpp  gltfmodel_component.h  particle_component.cpp  pingpong_component.cpp  pingpong_component.h  triangle_component.cpp  triangle_component.h
src/components/gltfmodel/: gltfmodel_component.cpp  gltfmodel_component.h
src/components/impl/: gltfmodel_component.cpp  gltfmodel_component.h  pingpong_component.cpp  pingpong_component.h  triangle_component.cpp  triangle_component.h
src/components/katamari/: katamari_component.cpp  katamari_component.h
src/components/master/: component.cpp  component.h
src/components/orbit/: orbit_component.cpp  orbit_component.h
src/components/particle/: particle_component.cpp  particle_component.h
src/components/pingpong/: pingpong_component.cpp  pingpong_component.h
src/components/triangle/: triangle_component.cpp
src/core/: game.cpp
src/render/resource/: shader.cpp
